# favoriteproduct

./: .dockerignore  .editorconfig  .env.default  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: exceptions.py  logging.py  settings.py
app/auth/: exceptions.py  schemas.py  services.py
app/customer/: exceptions.py  models.py  service.py
app/customer/adapters/: repository.py  schemas.py
app/entrypoints/: factories.py
app/entrypoints/fastapi/: main.py
app/entrypoints/fastapi/endpoints/auth/v1/: auth.py
app/entrypoints/fastapi/endpoints/customers/v1/: customers.py  schema.py
app/entrypoints/fastapi/exceptions/: custom.py  handlers.py
app/product/: exceptions.py  models.py
app/product/adapters/: repository.py  requester.py
app/user/: exceptions.py  models.py
app/user/adapters/: repository.py
tests/: conftest.py
tests/auth/: test_services.py
tests/customer/: conftest.py  test_service.py
tests/customer/integrations/: test_motor_repository.py
tests/customer/unit/: test_models.py
tests/entrypoints/fastapi/endpoints/auth/: conftest.py
tests/entrypoints/fastapi/endpoints/auth/v1/: test_auth.py
tests/entrypoints/fastapi/endpoints/customers/: conftest.py
tests/entrypoints/fastapi/endpoints/customers/v1/: test_customers.py
tests/product/: conftest.py
tests/product/integrations/: test_cached_motor_repository.py
tests/product/unit/: test_models.py
tests/user/: conftest.py
tests/user/integrations/: test_motor_repository.py
tests/user/unit/: test_models.py
